# processor-import-ome-zarr

./: Dockerfile  Makefile  README.md  dev.env  pyproject.toml
.github/workflows/: tests.yml
processor/: __init__.py  config.py  extractor.py  importer.py  main.py  utils.py
processor/clients/: __init__.py  authentication_client.py  base_client.py  import_client.py  workflow_client.py
tests/: __init__.py  conftest.py  test_authentication_client.py  test_base_client.py  test_config.py  test_extractor.py  test_import_client.py  test_importer.py  test_utils.py  test_workflow_client.py
